# eating-select-bot

./: .gitignore  README.md  bot.py  embeds.py  main.py  pyproject.toml  views.py
db/: db.py  tables.py
providers/: googlemap_crawler.py
train/: data_loader.py  model.py  train.py
